Finished responsive and converted the language to Arabic and German

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -63,5 +63,111 @@
   "Premium Plan": "الخطة المميزة",
   "Unlimited storage": "تخزين غير محدود",
   "Permanent Membership": "العضوية الدائمة",
-  "year": "سنة"
+  "year": "سنة",
+  "Single Chart": "مخطط واحد",
+  "Double Chart": "مخطط مزدوج",
+  "Logout": "تسجيل الخروج",
+  "Login": "تسجيل الدخول",
+  "Enter your password": "ادخل كلمة المرور الخاصة بك",
+  "Remember me": "تذكرني",
+  "Forget Email / Password?": "نسيت البريد الإلكتروني / كلمة المرور؟",
+  "Sign Up": "التسجيل",
+  "Confirm your password": "قم بتأكيد كلمة المرور الخاصة بك",
+  "Login Here": "تسجيل الدخول هنا",
+  "Already have an account?": "هل لديك حساب بالفعل؟",
+  "Opened Signals": "الإشارات المفتوحة",
+  "Pending Signals": "الإشارات المعلقة",
+  "Closed Signals": "الإشارات المغلقة",
+  "Timeframe": "الإطار الزمني",
+  "Recommendation": "الحالة",
+  "Pattern Type": "نوع النمط",
+  "Entry": "رقم الدخول",
+  "Take Profit": "جني الأرباح",
+  "Stop Loss": "وقف الخسارة",
+  "Please login to view this content": "الرجاء تسجيل الدخول لعرض هذا المحتوى",
+  "Calendar": "التقويم",
+  "Technical Indicator": "المؤشر الفني",
+  "Tech": "المؤشر",
+  "Patterns": "الأنماط",
+  "Moving Average": "المتوسط ​​المتحرك",
+  "M.A": "المتوسط",
+  "Pivot Points": "النقاط المحورية",
+  "P.P": "النقاط",
+  "Real-time Prices:": "الأسعار في الوقت الحقيقي:",
+  "Ask Price": "سعر الطلب",
+  "Bid Price": "سعر العرض",
+  "High Price": "السعر المرتفع",
+  "Low Price": "السعر المنخفض",
+  "Candle Volume": "حجم الشمعة",
+  "Daily Statistics:": "الإحصائيات اليومية:",
+  "High Price Daily": "السعر المرتفع يومياً",
+  "Low Price Daily": "السعر المنخفض يومياً",
+  "Daily Range": "النطاق اليومي",
+  "52-Week Range:": "نطاق ال52 أسبوع:",
+  "Highest 52 Weeks": "أعلي 52 أسبوع",
+  "Lowest 52 Weeks": "أقل 52 أسبوع",
+  "Annual Range": "النطاق السنوي",
+  "Additonal Metrics:": "المقاييس الإضافية:",
+  "Daily Volume": "الحجم اليومي",
+  "Percent Change": "التغيير المئوي",
+  "Description": "الوصف",
+  "All": "الكل",
+  "importance": "الأهمية",
+  "Country": "الدولة",
+  "Currency": "العملة",
+  "Actual": "الفعلي",
+  "Forecast": "التنبؤ",
+  "Previous": "السابق",
+  "Beginner": "مبتديء",
+  "Intermediate": "متوسط",
+  "Advanced": "متقدم",
+  "RSI": "",
+  "Stochastic Oscillator": "",
+  "Williams %R": "",
+  "Momentum": "",
+  "MFI (Money Flow Index)": "",
+  "Bollinger Bands": "",
+  "ATR": "",
+  "Heiken Ashi": "",
+  "Candle Signal": "",
+  "Parabolic SAR": "",
+  "MACD": "",
+  "SuperTrend": "",
+  "Donchian Channel": "",
+  "DPO": "",
+  "Aroon Indicator": "",
+  "Fractals": "",
+  "Zistilo Explosion": "",
+  "Ultimate Oscillator": "",
+  "ADX": "",
+  "Supply Demand": "",
+  "Ichimoku Kinko Hyo": "",
+  "Elder Impulse": "",
+  "Schaff Trend Cycle": "",
+  "CMF_T3": "",
+  "Mega_Fx": "",
+  "Misus Entry Indicator": "",
+  "Vortex Indicator": "",
+  "Volume Oscillator": "",
+  "Elder Ray Index": "",
+  "HMA": "",
+  "QQE": "",
+  "CCI": "",
+  "Semafor": "",
+  "AMA": "",
+  "Awesome Oscillator (AO)": "",
+  "Buy": "شراء",
+  "Sell": "بيع",
+  "Neutral": "حيادي",
+  "Strong Buy": "شراء قوي",
+  "Strong Sell": "بيع قوي",
+  "Trade Signal": "إشارة التجارة",
+  "Candle Type": "نوع الشمعة",
+  "Strength": "القوة",
+  "Classic": "كلاسيكي",
+  "Fibonacci": "فيبوناتشي",
+  "Camarilla": "كاماريلا",
+  "Level": "المستوى",
+  "Value": "القيمة",
+  "Current Value": "القيمة الحالية"
 }
