--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -63,5 +63,111 @@
   "Premium Plan": "Premium-Plan",
   "Unlimited storage": "Unbegrenzter Speicherplatz",
   "Permanent Membership": "Dauerhafte Mitgliedschaft",
-  "year": "Jahr"
+  "year": "Jahr",
+  "Single Chart": "Einzeldiagramm",
+  "Double Chart": "Doppeldiagramm",
+  "Logout": "Abmelden",
+  "Login": "Login",
+  "Enter your password": "Geben Sie Ihr Passwort ein",
+  "Remember me": "Erinnere dich an mich",
+  "Forget Email / Password?": "E-Mail/Passwort vergessen?",
+  "Sign Up": "Anmeldung",
+  "Confirm your password": "Bestätigen Sie Ihr Passwort",
+  "Login Here": "Melden hier",
+  "Already have an account?": "Sie haben bereits ein Konto?",
+  "Opened Signals": "Geöffnete Signale",
+  "Pending Signals": "Ausstehende Signale",
+  "Closed Signals": "Geschlossene Signale",
+  "Timeframe": "Zeitrahmen",
+  "Recommendation": "Empfehlung",
+  "Pattern Type": "Mustertyp",
+  "Entry": "Eintrag",
+  "Take Profit": "Profitieren",
+  "Stop Loss": "Stop-Loss",
+  "Please login to view this content": "Bitte melden Sie sich an, um den Inhalt anzuzeigen",
+  "Calendar": "Kalender",
+  "Technical Indicator": "Technischer Indikator",
+  "Tech": "Tech",
+  "Patterns": "Muster",
+  "Moving Average": "Gleitender Durchschnitt",
+  "M.A": "M.A",
+  "Pivot Points": "Dreh- und Angelpunkte",
+  "P.P": "P.P",
+  "Real-time Prices:": "Echtzeitpreise:",
+  "Ask Price": "Preis erfragen",
+  "Bid Price": "Angebotspreis",
+  "High Price": "Hoher Preis",
+  "Low Price": "Niedriger Preis",
+  "Candle Volume": "Kerzenvolumen",
+  "Daily Statistics:": "Tägliche Statistiken:",
+  "High Price Daily": "Täglich hoher Preis",
+  "Low Price Daily": "Niedriger Preis täglich",
+  "Daily Range": "Tagesreichweite",
+  "52-Week Range:": "52-Wochen-Bereich:",
+  "Highest 52 Weeks": "Höchste 52 Wochen",
+  "Lowest 52 Weeks": "Niedrigste 52 Wochen",
+  "Annual Range": "Jährliche Reichweite",
+  "Additonal Metrics:": "Zusätzliche Metriken:",
+  "Daily Volume": "Tägliches Volumen",
+  "Percent Change": "Prozentuale Änderung",
+  "Description": "Beschreibung",
+  "All": "Alle",
+  "Importance": "Bedeutung",
+  "Country": "Land",
+  "Currency": "Währung",
+  "Actual": "Tatsächlich",
+  "Forecast": "Vorhersage",
+  "Previous": "Vorherige",
+  "Beginner": "Anfängerin",
+  "Intermediate": "Dazwischenliegend",
+  "Advanced": "Fortschrittlich",
+  "RSI": "",
+  "Stochastic Oscillator": "",
+  "Williams %R": "",
+  "Momentum": "",
+  "MFI (Money Flow Index)": "",
+  "Bollinger Bands": "",
+  "ATR": "",
+  "Heiken Ashi": "",
+  "Candle Signal": "",
+  "Parabolic SAR": "",
+  "MACD": "",
+  "SuperTrend": "",
+  "Donchian Channel": "",
+  "DPO": "",
+  "Aroon Indicator": "",
+  "Fractals": "",
+  "Zistilo Explosion": "",
+  "Ultimate Oscillator": "",
+  "ADX": "",
+  "Supply Demand": "",
+  "Ichimoku Kinko Hyo": "",
+  "Elder Impulse": "",
+  "Schaff Trend Cycle": "",
+  "CMF_T3": "",
+  "Mega_Fx": "",
+  "Misus Entry Indicator": "",
+  "Vortex Indicator": "",
+  "Volume Oscillator": "",
+  "Elder Ray Index": "",
+  "HMA": "",
+  "QQE": "",
+  "CCI": "",
+  "Semafor": "",
+  "AMA": "",
+  "Awesome Oscillator (AO)": "",
+  "Buy": "Kaufen",
+  "Sell": "Verkaufen",
+  "Neutral": "Neutral",
+  "Strong Buy": "Starker Kauf",
+  "Strong Sell": "Starker Verkauf",
+  "Trade Signal": "Handelssignal",
+  "Candle Type": "Kerzentyp",
+  "Strength": "Stärke",
+  "Classic": "Klassiker",
+  "Fibonacci": "Fibonacci",
+  "Camarilla": "Camarilla",
+  "Level": "Ebene",
+  "Value": "Wert",
+  "Current Value": "Aktueller Wert"
 }
